src/main/java/org/example/interfaceSegregastion/example/good/CanWalk.java
package org.example.interfaceSegregastion.example.good;

public interface CanWalk {
    void walk();

}
